--- a/_includes/map.html
+++ b/_includes/map.html
@@ -1,3 +1,4 @@
+<!-- I Cargo-Culted this so hard I still have marks from the bamboo headphones -->
 <div id='map' class='map'></div>
   <script src='http://openlayers.org/api/OpenLayers.js'></script>
   <script>
@@ -35,3 +36,4 @@
     <a href='http://www.openstreetmap.org/?mlat={{ include.latitude }}&amp;mlon={{ include.longitude }}#map=16/{{ include.latitude }}/{{ page.longitude }}'>View larger map</a>
   </p>
 </div>
+<!-- I am John Frum -->
