--- a/_layouts/gig.html
+++ b/_layouts/gig.html
@@ -6,28 +6,32 @@ layout: default
     <div class='gig'>
       <dl class='dl-horizontal'>
 
-      <dt>Date<dt>
-      <dd>{{ page.date | date_to_long_string }}</dd>
+        <dt>Date<dt>
+        <dd>{{ page.date | date_to_long_string }}</dd>
 
-      <dt>Time</dt>
-      <dd>{{ page.time }}</dd>
+        <dt>Time</dt>
+        <dd>{{ page.time }}</dd>
 
-      <dt>Location</dt>
-      <dd>{{ page.location }}</dd>
+        <dt>Location</dt>
+        <dd>{{ page.location }}</dd>
 
-      {% if page.price %}
-        <dt>Price</dt>
-        <dd>{{ page.price }}</dd>
-      {% endif %}
+        {% if page.price %}
+          <dt>Price</dt>
+          <dd>{{ page.price }}</dd>
+        {% endif %}
 
-      {% if page.facebook_id %}
-        <dt>More info</dt>
-        <dd><a href='https://facebook.com/events/{{ page.facebook_id }}/' title='Facebook event'>Facebook</a></dd>
-      {% endif %}
+        {% if page.facebook_id %}
+          <dt>More info</dt>
+          <dd>
+            <a href='https://facebook.com/events/{{ page.facebook_id }}/' title='Facebook event'>
+              Facebook
+            </a>
+          </dd>
+        {% endif %}
 
-    </dl>
+      </dl>
+    </div>
   </div>
-</div>
 
   <div class='col-md-6'>
     {% include map.html latitude = page.latitude longitude = page.longitude %}
