--- a/assets/application.scss
+++ b/assets/application.scss
@@ -68,7 +68,7 @@ $header-height: 250px;
   width: 100%;
 
   background: $brand-primary;
-  background-image: url('/assets/images/backgrounds/background.png');
+  background-image: url('/assets/images/backgrounds/background.jpg');
   height: $header-height;
   margin-top: 0px;
   margin-bottom: 20px;
