--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,9 @@
 <html lang='en'>
   <head>
     {% include boilerplate.html %}
-
+    
+    <link rel='icon' type='image/png' href='/assets/favicon.ico' />
+    <link rel='stylesheet' href='/assets/application.css' type='text/css' />
     <style>{{ page.extra_styles }}</style>
     <title>{{ page.title }}</title>
   </head>
