--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,12 +1,14 @@
 <nav class='navbar navbar-default' role='navigation'>
-  {% include mobile-nav.html %}
-
-  <!-- Collect the nav links, forms, and other content for toggling -->
-  <div class='collapse navbar-collapse' id='navbar-collapse'>
-    <ul class='nav nav-stacked pull-right' role='tablist'>
-      {% for item in site.data.navigation %}
-        {% include nav-item.html title = item.title path = item.path current = page.url %}
-      {% endfor %}
-    </ul>
-  </div><!-- /.navbar-collapse -->
+  <div class="container-fluid">
+    {% include mobile-nav.html %}
+    <div class='collapse navbar-collapse' id='navbar-collapse'>
+      <div class="container">
+        <ul class='nav nav-pills' role='tablist'>
+          {% for item in site.data.navigation %}
+            {% include nav-item.html title = item.title path = item.path current = page.url %}
+          {% endfor %}
+        </ul>
+      </div>
+    </div><!-- /.navbar-collapse -->
+  </div>
 </nav>
