--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,7 +1,7 @@
 <nav class='navbar navbar-default hidden-md hidden-lg' role='navigation'>
   {% include mobile-nav.html %}
   <div class='collapse navbar-collapse' id='navbar-collapse'>
-    <ul class='nav nav-pills' role='tablist'>
+    <ul class='nav nav-pills pull-right' role='tablist'>
       {% for item in site.data.navigation %}
         {% include nav-item.html title = item.title path = item.path current = page.url %}
       {% endfor %}
