--- a/_layouts/gig.html
+++ b/_layouts/gig.html
@@ -2,7 +2,8 @@
 layout: default
 ---
 <div class='row'>
-  <div class='col-md-6'>
+  <div class='col-md-1'></div>
+  <div class='col-md-5'>
     <div class='gig'>
       <dl class='dl-horizontal'>
 
