--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,10 +1,7 @@
 <div class='footer'>
   <div class='text-center bottom'>
     {% for link in site.data.links %}
-      <a href='{{ link.url }}' title='{{ link.title }}'>
-        <i class='fa {{ link.fontawesome }}'></i>
-        <span class='hidden-xs'>{{ link.title }}</span>
-      </a>
+      <a href='{{ link.url }}' title='{{ link.title }}'><i class='fa {{ link.fontawesome }}'></i><span class='hidden-xs'> {{ link.title }}</span></a>
       {% if forloop.rindex0 > 0 %}
         |
       {% endif %}
