--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,20 +1,20 @@
-<nav class='navbar navbar-default hidden-md hidden-lg' role='navigation'>
+<nav class='navbar navbar-default' role='navigation'>
   {% include mobile-nav.html %}
   <div class='collapse navbar-collapse' id='navbar-collapse'>
-    <ul class='nav nav-pills pull-right' role='tablist'>
-      {% for item in site.data.navigation %}
-        {% include nav-item.html title = item.title path = item.path current = page.url %}
-      {% endfor %}
-    </ul>
-  </div>
-</nav>
 
-<nav class='navbar navbar-default hidden-xs hidden-sm' role='navigation'>
-  <div class='collapse navbar-collapse' id='navbar-collapse'>
-    <ul class='nav nav-stacked nav-pills pull-right' role='tablist'>
+    <!-- mobile -->
+    <ul class='nav nav-pills pull-right hidden-md hidden-lg' role='tablist'>
       {% for item in site.data.navigation %}
         {% include nav-item.html title = item.title path = item.path current = page.url %}
       {% endfor %}
     </ul>
-  </div><!-- /.navbar-collapse -->
+
+    <!-- desktop -->
+    <ul class='nav nav-stacked nav-pills pull-right hidden-xs hidden-sm' role='tablist'>
+      {% for item in site.data.navigation %}
+        {% include nav-item.html title = item.title path = item.path current = page.url %}
+      {% endfor %}
+    </ul>
+
+  </div>
 </nav>
