--- a/assets/application.scss
+++ b/assets/application.scss
@@ -190,6 +190,11 @@ p.splash{
     padding-top: 0px;
     margin-top: 0px;
   }
+
+  .caption h2 {
+    font-size: 0.6em;
+    text-align: center;
+  }
 }
 
 .clinton {
