--- a/_includes/sound.html
+++ b/_includes/sound.html
@@ -1,19 +1,13 @@
+{% assign hide_related = 'true' %}
+{% assign show_user = 'false' %}
+{% assign visual = 'false' %}
+
 <div class='col-md-{{ include.width }}'>
   <div class='thumbnail'>
-    <div class='embed-responsive embed-responsive-4by3'
-         id='player-{{ include.id }}'></div>
+    <div class='embed-responsive embed-responsive-4by3'>
+      <iframe class='embed-responsive-item'
+              src='https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/{{ include.id }}&amp;auto_play=false&amp;hide_related={{ hide_related }}&amp;show_comments=true&amp;show_user={{ show_user }}&amp;show_reposts=false&amp;visual=true'>
+      </iframe>
+    </div>
   </div>
 </div>
-
-
-<script>
-  $(document).ready(function() {
-    SC.get(
-      '/tracks/{{ include.id }}', function(track) {
-      SC.oEmbed(
-        track.permalink_url,
-        document.getElementById('player-{{ include.id }}')
-      );
-    });
-  });
-</script>
