--- a/assets/application.scss
+++ b/assets/application.scss
@@ -117,6 +117,37 @@ $header-height: 250px;
 
 /* End nav */
 
+/* Gallery styles
+-------------------------------------------------- */
+
+$flickr-height: 160px;
+
+.flickr {
+  h1 {
+    font-size: 1em;
+  }
+
+  h2 {
+    font-size: 1em;
+  }
+
+  .caption h1, h2 {
+    padding-top: 0px;
+    margin-top: 0px;
+  }
+
+  .caption h2 {
+    font-size: 0.6em;
+    text-align: center;
+  }
+
+  img {
+    max-height: $flickr-height;
+  }
+}
+
+/* End gallery */
+
 img.thumb {
   max-height: 200px;
 }
@@ -174,26 +205,6 @@ p.splash{
   background: $rfm-orange;
   a {
     color: $rfm-green;
-  }
-}
-
-.flickr {
-  h1 {
-    font-size: 1em;
-  }
-
-  h2 {
-    font-size: 1em;
-  }
-
-  .caption h1, h2 {
-    padding-top: 0px;
-    margin-top: 0px;
-  }
-
-  .caption h2 {
-    font-size: 0.6em;
-    text-align: center;
   }
 }
 
