--- a/_includes/sound.html
+++ b/_includes/sound.html
@@ -5,6 +5,7 @@
   </div>
 </div>
 
+<!-- More John Frum action -->
 <script>
   $(document).ready(function() {
     SC.get(
@@ -17,3 +18,8 @@
     });
   });
 </script>
+<!-- this intermittenly seems to raise
+
+  No 'Access-Control-Allow-Origin' header is present on the requested resource.
+
+-->
