--- a/_includes/hacky-sound.html
+++ b/_includes/hacky-sound.html
@@ -3,7 +3,7 @@
 {% assign visual = 'false' %}
 
 <div class='col-md-{{ include.width }}'>
-  <div class='thumbnail'>
+  <div class='thumbnail soundcloud'>
     <div class='embed-responsive embed-responsive-16by9'>
       <iframe class='embed-responsive-item'
               src='https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/{{ include.id }}&amp;auto_play=false&amp;hide_related={{ hide_related }}&amp;show_comments=true&amp;show_user={{ show_user }}&amp;show_reposts=false&amp;visual=true'>
