--- a/assets/application.scss
+++ b/assets/application.scss
@@ -214,3 +214,9 @@ p.splash{
     padding-top: $padding-large-vertical;
   }
 }
+
+.license-note {
+    text-align: center;
+    font-size: 0.7em;
+    margin-top: 0px;
+}
