--- a/_includes/license_note.html
+++ b/_includes/license_note.html
@@ -1,1 +1,1 @@
-<h2 class='license-note'>All {{ include.licensed }} licensed <a href='https://creativecommons.org/licenses/by-nc-sa/2.0/'>Attribution-NonCommercial-ShareAlike</a></h2>
+<h2 class='license-note'>All {{ include.licensed }} licensed <a href='https://creativecommons.org/licenses/by-nc-sa/{{ include.version }}'>Attribution-NonCommercial-ShareAlike</a></h2>
