--- a/_includes/license_note.html
+++ b/_includes/license_note.html
@@ -1,4 +1,5 @@
 <h2 class='license-note'>
-  All {{ include.licensed }} CC-licensed
+  All {{ include.licensed }} published under a Creative Commons
   <a href='https://creativecommons.org/licenses/by-nc-sa/{{ include.version }}'>Attribution-NonCommercial-ShareAlike</a>
+  license
 </h2>
