--- a/_includes/hacky-sound.html
+++ b/_includes/hacky-sound.html
@@ -1,12 +1,38 @@
-{% assign hide_related = 'true' %}
-{% assign show_user = 'false' %}
-{% assign visual = 'false' %}
+{% assign auto_play = false %}
+{% assign hide_related = true %}
+{% assign show_comments = false %}
+{% assign show_user = false %}
+{% assign show_reposts= false %}
+{% assign visual = true %}
+
+{% assign url = 'https://w.soundcloud.com/player/' %}
+
+{% capture url %}{{ url | append:'?url=https%3A//api.soundcloud.com/tracks/' }}{% endcapture %}
+{% capture url %}{{ url | append:include.id }}{% endcapture %}
+
+{% capture url %}{{ url | append:'&amp;auto_play=' }}{% endcapture %}
+{% capture url %}{{ url | append:auto_play }}{% endcapture %}
+
+{% capture url %}{{ url | append:'&amp;hide_related=' }}{% endcapture %}
+{% capture url %}{{ url | append:hide_related }}{% endcapture %}
+
+{% capture url %}{{ url | append:'&amp;show_comments=' }}{% endcapture %}
+{% capture url %}{{ url | append:show_comments }}{% endcapture %}
+
+{% capture url %}{{ url | append:'&amp;show_user=' }}{% endcapture %}
+{% capture url %}{{ url | append:show_user }}{% endcapture %}
+
+{% capture url %}{{ url | append:'&amp;show_reposts=' }}{% endcapture %}
+{% capture url %}{{ url | append:show_reposts }}{% endcapture %}
+
+{% capture url %}{{ url | append:'&amp;visual=' }}{% endcapture %}
+{% capture url %}{{ url | append:visual }}{% endcapture %}
 
 <div class='col-md-{{ include.width }}'>
   <div class='thumbnail soundcloud'>
     <div class='embed-responsive embed-responsive-16by9'>
       <iframe class='embed-responsive-item'
-              src='https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/{{ include.id }}&amp;auto_play=false&amp;hide_related={{ hide_related }}&amp;show_comments=true&amp;show_user={{ show_user }}&amp;show_reposts=false&amp;visual=true'>
+              src={{ url }}>
       </iframe>
     </div>
   </div>
