--- a/_layouts/gig.html
+++ b/_layouts/gig.html
@@ -38,3 +38,22 @@ layout: default
     {% include map.html latitude = page.latitude longitude = page.longitude %}
   </div>
 </div>
+
+<script type="application/ld+json">
+[{
+  "@context" : "http://schema.org",
+  "@type" : "MusicEvent",
+  "name" : "Raw Funk Maharishi live at {{ page.title }}",
+  "startDate" : "{{ page.date }}T {{ page.time }}",
+  "location" : {
+    "@type" : "Place",
+    "name" : "{{ page.title }}",
+    "address" : "{{ page.location }}"
+  },
+  "performer" : [{
+    "@type" : "MusicGroup",
+    "name" : "Raw Funk Maharishi",
+    "sameAs" : "http://rawfunkmaharishi.uk/"
+  }]
+}]
+</script>
