--- a/assets/application.scss
+++ b/assets/application.scss
@@ -220,3 +220,17 @@ p.splash{
     font-size: 0.7em;
     margin-top: 0px;
 }
+
+.blost {
+  text-transform: none;
+  text-align: justify;
+}
+
+.blog-archive {
+  list-style-type: none;
+  font-size: 2em;
+}
+
+.sidebar {
+  font-size: 0.5em;
+}
