--- a/_layouts/blost.html
+++ b/_layouts/blost.html
@@ -8,7 +8,7 @@ layout: default
   </div>
   <div class='col-md-1'></div>
   <div class='col-md-2 sidebar'>
-    <h2>Blog</h2>
+    <h4>More from the blog</h4>
     {% include blog_archive.html %}
   </div>
 </div>
