--- a/_layouts/blost.html
+++ b/_layouts/blost.html
@@ -9,6 +9,6 @@ layout: default
   <div class='col-md-1'></div>
   <div class='col-md-2 sidebar'>
     <h2>More from the blog</h2>
-    {% include blog_archive.html %}
+    {% include blog_archive.html no_excerpts = true %}
   </div>
 </div>
