For mobile, mostly

--- a/assets/application.scss
+++ b/assets/application.scss
@@ -242,6 +242,7 @@ p.splash{
   }
   font-size: 0.5em;
   background-color: $gray-lighter;
+  padding-top: $padding-small-vertical;
 
   dt {
     padding-bottom: $padding-large-vertical;
