--- a/_sass/fonts.scss
+++ b/_sass/fonts.scss
@@ -1,4 +1,5 @@
 @import url(http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css);
+@import url(http://fonts.googleapis.com/css?family=Ubuntu+Mono);
 @import url(http://fonts.googleapis.com/css?family=Dosis);
 
 $font-family-sans-serif: "Dosis", sans-serif;
