--- a/_layouts/blost.html
+++ b/_layouts/blost.html
@@ -1,10 +1,14 @@
 ---
 layout: default
+comments: true
 ---
 <div class='row'>
   <div class='col-md-3'></div>
   <div class='col-md-6 blost'>
     {{ content }}
+    {% if page.comments %}
+      {% include comments.html %}
+    {% endif %}
   </div>
   <div class='col-md-1'></div>
   <div class='col-md-2 sidebar'>
