Separate the post links

--- a/assets/application.scss
+++ b/assets/application.scss
@@ -231,7 +231,7 @@ p.splash{
   dd {
     text-transform: none;
     font-size: 0.7em;
-    padding-bottom: $padding-large-vertical;
+    padding-bottom: $padding-small-vertical;
   }
 }
 
