--- a/_includes/blog_archive.html
+++ b/_includes/blog_archive.html
@@ -5,8 +5,13 @@
     </dt>
     {% unless include.no_excerpts %}
       <dd>
-        {{ post.excerpt | strip_html | truncate: 200, '...' }}
+        {{ post.excerpt | strip_html | truncate: 150, '...' }}
+        <span class='small'><a href='{{ post.url }}'>[read more]</a></span>
       </dd>
+{% if forloop.rindex > 1 %}
+  <hr />
+{% endif %}
     {% endunless %}
+
   {% endfor %}
 </dl>
