This link works just fine here

--- a/_layouts/blost.html
+++ b/_layouts/blost.html
@@ -2,6 +2,7 @@
 layout: default
 comments: true
 ---
+
 <div class='row'>
   <div class='col-md-3'></div>
   <div class='col-md-6 blost'>
@@ -12,7 +13,7 @@ comments: true
   </div>
   <div class='col-md-1'></div>
   <div class='col-md-2 sidebar'>
-    <h2>More from the blog</h2>
+    <h2>More from the <a href='/blog/'>blog</a></h2>
     {% include blog_archive.html no_excerpts = true %}
   </div>
 </div>
