--- a/_includes/blog_archive.html
+++ b/_includes/blog_archive.html
@@ -2,24 +2,18 @@
   {% for prioritypost in site.data.priority-blosts %}
     {% for post in site.categories['blog'] %}
       {% if post.title == prioritypost %}
-        {% include blost-link.html title = post.title url = post.url %}
-        {% unless include.no_excerpts %}
-          {% include blost-excerpt.html excerpt = post.excerpt url = post.url %}
-          <hr />
-        {% endunless %}
+        {% include blost-link.html title = post.title url = post.url no_excerpts = include.no_excerpts excerpt = post.excerpt hr = true %}
       {% endif %}
     {% endfor %}
   {% endfor %}
 
   {% for post in site.categories['blog'] reversed %}
     {% unless site.data.priority-blosts contains post.title %}
-      {% include blost-link.html title = post.title url = post.url %}
-      {% unless include.no_excerpts %}
-        {% include blost-excerpt.html excerpt = post.excerpt url = post.url %}
-        {% if forloop.rindex0 > site.data.priority-blosts.size %}
-          <hr />
-        {% endif %}
-      {% endunless %}
+      {% assign hr = false %}
+      {% if forloop.rindex0 > site.data.priority-blosts.size %}
+        {% assign hr = true %}
+      {% endif %}
+      {% include blost-link.html title = post.title url = post.url no_excerpts = include.no_excerpts excerpt = post.excerpt hr = hr %}
     {% endunless %}
   {% endfor %}
 </dl>
