Style header *and* footer
For blog section

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
-<div class='footer'>
-  <div class='text-center bottom'>
+<div class='footer {{ include.trim_class }}'>
+  <div class='text-center bottom links'>
     {% for link in site.data.links %}
       <a href='{{ link.url }}' title='{{ link.title }}'><i class='fa {{ link.fontawesome }}'></i><span class='hidden-xs'> {{ link.title }}</span></a>
       {% if forloop.rindex0 > 0 %}
