--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,4 @@
-<div class='header {{ include.header_class }}'>
+<div class='header {{ include.trim_class }}'>
   <div class='container'>
     <div class='row'>
 
