BG image maybe works?

--- a/assets/application.scss
+++ b/assets/application.scss
@@ -264,6 +264,7 @@ p.splash{
   }
   font-size: 0.5em;
   background-color: $rfm-orange;
+  background-image: url('/assets/images/backgrounds/background_orange.jpg');
   padding-top: $padding-small-vertical;
 
   dt {
