--- a/assets/application.scss
+++ b/assets/application.scss
@@ -274,6 +274,7 @@ p.splash{
   background-color: $rfm-orange;
   background-image: url('/assets/images/backgrounds/background_orange.jpg');
   padding-top: $padding-small-vertical;
+  margin-bottom: $padding-large-vertical;
 
   dt {
     padding-bottom: $padding-large-vertical;
