--- a/_includes/blog_archive.html
+++ b/_includes/blog_archive.html
@@ -10,7 +10,7 @@
   {% for post in site.categories['blog'] reversed %}
     {% unless site.data.priority-blosts contains post.title %}
       {% assign hr = false %}
-      {% if forloop.rindex0 > site.data.priority-blosts.size %}
+      {% if forloop.rindex > 1 %}
         {% assign hr = true %}
       {% endif %}
       {% include blost-link.html title = post.title url = post.url no_excerpts = include.no_excerpts excerpt = post.excerpt hr = hr %}
