--- a/_sass/bootstrap-custom.scss
+++ b/_sass/bootstrap-custom.scss
@@ -1,5 +1,6 @@
-$rfm-green:     #86cabc;
-$rfm-orange:    #fd6400;
+$rfm-green:      #86cabc;
+$rfm-orange:     #fd6400;
+$rfm-dark-green: #4B7069;
 
 $gray-darker:   lighten(#000, 13.5%); // #222
 $gray-dark:     lighten(#000, 20%);   // #333
