--- a/_layouts/blost.html
+++ b/_layouts/blost.html
@@ -15,6 +15,6 @@ trim_class: blog
   <div class='col-md-1'></div>
   <div class='col-md-2 sidebar'>
     <h2>More from the <a href='/blog/'>blog</a></h2>
-    {% include blog_archive.html no_excerpts = true %}
+    {% include blog-archive.html no_excerpts = true %}
   </div>
 </div>
