--- a/assets/application.scss
+++ b/assets/application.scss
@@ -304,3 +304,14 @@ code {
 
 .book-us {
 }
+
+.reviews {
+  dt {
+    font-size: 1.5em;
+  }
+
+  dd {
+    font-size: 1.2em;
+    text-align: right;
+  }
+}
