Style the mobile menu toggle

--- a/assets/application.scss
+++ b/assets/application.scss
@@ -320,3 +320,17 @@ code {
     text-align: right;
   }
 }
+
+/* mobile version */
+.navbar-default .navbar-toggle {
+  border-color: $gray;
+}
+.navbar-default .navbar-toggle:hover,
+.navbar-default .navbar-toggle:focus {
+  background-color: $rfm-green;
+  opacity: 0.5;
+}
+
+.navbar-default .navbar-toggle .icon-bar {
+  background-color: $gray;
+}
