Pull menu away from top

--- a/assets/application.scss
+++ b/assets/application.scss
@@ -124,6 +124,7 @@ $header-height: 220px;
    background-color: transparent;
    background: transparent;
    border: none;
+   padding-top: 2px;
 
   a {
     color: black;
