--- a/assets/application.scss
+++ b/assets/application.scss
@@ -316,6 +316,9 @@ code {
 .reviews {
   dt {
     font-size: 1.5em;
+//    background-color: $gray-lighter;
+//    padding-left: 5px;
+//    padding-right: 5px;
   }
 
   dd {
