--- a/assets/application.scss
+++ b/assets/application.scss
@@ -101,6 +101,7 @@ $header-height: 240px;
 
  .nav {
     li {
+
       a:hover, a:focus {
         background-color: $rfm-green;
         opacity: 0.9;
@@ -125,6 +126,7 @@ $header-height: 240px;
    background: transparent;
    border: none;
    padding-top: 2px;
+   font-weight: bolder;
 
   a {
     color: black;
