--- a/assets/application.scss
+++ b/assets/application.scss
@@ -26,7 +26,7 @@ $footer-height: 50px;
 html {
   position: relative;
   min-height: 100%;
-  text-transform: uppercase;
+  text-transform: none;
 }
 
 body {
@@ -38,6 +38,7 @@ body {
   position: absolute;
   bottom: 0;
   width: 100%;
+  text-transform: uppercase;
 
   margin-top: $padding-large-vertical;
   background: $brand-primary;
@@ -117,6 +118,11 @@ $header-height: 240px;
   }
 }
 
+.blog-page {
+  dt {
+    text-transform: uppercase;
+  }
+}
 
 /* Nav styles
 -------------------------------------------------- */
@@ -127,6 +133,7 @@ $header-height: 240px;
    border: none;
    padding-top: 2px;
    font-weight: bolder;
+   text-transform: uppercase;
 
   a {
     color: black;
@@ -203,6 +210,7 @@ p {
 
 p.splash{
   color: white;
+  text-transform: none;
 }
 
 .thumbnail {
@@ -225,6 +233,9 @@ p.splash{
 
 .giglist {
   padding-bottom: $padding-large-vertical;
+  h2 {
+    text-transform: uppercase;
+  }
 }
 
 .gig-archive {
@@ -273,8 +284,9 @@ p.splash{
 .blog-archive {
   list-style-type: none;
   font-size: 2em;
+
   dd {
-    text-transform: none;
+  //  text-transform: none;
     font-size: 0.7em;
     padding-bottom: $padding-small-vertical;
   }
@@ -343,6 +355,7 @@ code {
 .main-title {
   font-weight: bolder;
   text-align: center;
+  text-transform: uppercase;
 }
 
 /* mobile version */
