Fix up mobile nav menu
Closes #45

--- a/assets/application.scss
+++ b/assets/application.scss
@@ -70,7 +70,7 @@ body {
 /* Header styles
 -------------------------------------------------- */
 
-$header-height: 240px;
+$header-height: 270px;
 
 .header {
   top: 0;
@@ -373,7 +373,7 @@ code {
 }
 
 ul.mobile {
-  height: 5em;
+  //height: 5em;
 }
 
 .merch {
