Still broken, but at least fathomable now

--- a/assets/application.scss
+++ b/assets/application.scss
@@ -87,6 +87,11 @@ $header-height: 270px;
     height: auto;
   }
 
+  .little-logo {
+    width: 50%;
+    height: auto;
+  }
+
   p {
     text-transform: uppercase;
     text-align: right;
