Just hide it on -md-

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,17 +1,15 @@
 <div class='header {{ include.trim_class }}'>
   <div class='container'>
     <div class='row'>
-
       <div class='col-md-4 col-md-push-8'>
         {% include navigation.html %}
       </div>
 
-      <div class='col-md-8 col-md-pull-4'>
+      <div class='col-md-8 col-md-pull-4 hidden-sm'>
         <a href='/'>
           <img src='/assets/images/logos/wide/banner.png' alt='Raw Funk Maharishi' class='logo'/>
         </a>
       </div>
-
     </div>
   </div>
 </div>
