bit hacky, but works

--- a/assets/application.scss
+++ b/assets/application.scss
@@ -88,8 +88,10 @@ $header-height: 270px;
   }
 
   .little-logo {
-    width: 50%;
+    width: 80%;
     height: auto;
+    position: relative;
+    top: -200px;
   }
 
   p {
