--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,4 @@
 <div class='header {{ include.trim_class }}'>
-  <div class='container'>
     <div class='row'>
       <div class='col-md-4 col-md-push-8'>
         {% include navigation.html %}
@@ -10,6 +9,11 @@
           <img src='/assets/images/logos/wide/banner.png' alt='Raw Funk Maharishi' class='logo'/>
         </a>
       </div>
+
+      <div class='col-md-8 col-md-pull-4 visible-sm'>
+        <a href='/'>
+          <img src='/assets/images/logos/wide/banner.png' alt='Raw Funk Maharishi' class='little-logo'/>
+        </a>
+      </div>
     </div>
-  </div>
 </div>
