--- a/_includes/book-us.html
+++ b/_includes/book-us.html
@@ -1,4 +1,4 @@
-<h4 class='text-center book-us'>
+<h4 class='book-us'>
   If you'd like to book the band, please contact us on
   <a href='https://www.facebook.com/rawfunkmaharishi'>Facebook</a>
   or
