--- a/assets/application.scss
+++ b/assets/application.scss
@@ -242,6 +242,10 @@ p.splash{
 
 .giglist {
   padding-bottom: $padding-large-vertical;
+  h2, h3 {
+    text-align: left;
+  }
+
   h2 {
     text-transform: uppercase;
   }
