--- a/_includes/book-us.html
+++ b/_includes/book-us.html
@@ -5,5 +5,5 @@
   <a href='https://twitter.com/uncookedfunk'>Twitter</a>,
   or make a
   <a href='https://github.com/rawfunkmaharishi/rawfunkmaharishi.github.io/blob/master/gigs/_posts/HOW_TO_BOOK_THE_BAND.md'>
-  pull-request on Github</a>.
+  pull-request on Github</a>
 </h4>
