--- a/_includes/gig.html
+++ b/_includes/gig.html
@@ -1,5 +1,2 @@
-<div class='post'>
-  <h3 class='title'>{{ include.date | date_to_long_string }}:
-    <a href='{{ include.url }}'>{{ include.title }}</a>
-  </h3>
-</div>
+  <dt class='title'>{{ include.date | date_to_long_string }}:</dt>
+  <dd><a href='{{ include.url }}'>{{ include.title }}</a></dd>
