--- a/assets/application.scss
+++ b/assets/application.scss
@@ -102,6 +102,10 @@ $header-height: 270px;
     text-transform: uppercase;
     text-align: right;
   }
+
+  .container {
+//    padding: 0;
+  }
 }
 
 /* End header */
