--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,5 @@
 <div class='header {{ include.trim_class }}'>
+  <div class='container'>
     <div class='row'>
       <div class='col-md-4 col-md-push-8'>
         {% include navigation.html %}
@@ -16,4 +17,5 @@
         </a>
       </div>
     </div>
+  </div>
 </div>
