Full-width is better

--- a/assets/application.scss
+++ b/assets/application.scss
@@ -103,8 +103,8 @@ $header-height: 270px;
     text-align: right;
   }
 
-  .container {
-//    padding: 0;
+.header-container {
+  width: 100%;
   }
 }
 
