--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,5 @@
 <div class='header {{ include.trim_class }}'>
-  <div class='container'>
+  <div class='container header-container'>
     <div class='row'>
       <div class='col-md-4 col-md-push-8'>
         {% include navigation.html %}
