--- a/_includes/picture.html
+++ b/_includes/picture.html
@@ -1,20 +1,18 @@
-<div class='col-md-3 thumbnail flickr'>
-  <a href='{{ include.photo_page }}' title='View full-size on Flickr'>
+<div class='col-md-{{ include.cols}} thumbnail {{ include.class }}'>
+  <a href='{{ include.photo_page }}'>
     <img src='{{ include.url }}' alt='{{ include.title }}'/>
   </a>
   <div class='caption'>
     <h1>
       {{ include.title }}
-      {% if include.photographer %}
-        <small>
-          Photo by
-          <a href='{{ site.data.photographers[include.photographer].website }}'>
-            {{ include.photographer | capitalize }}
-          </a>
-        </small>
-      {% endif %}
     </h1>
     <h2>
+      {% if include.photographer %}
+        Photo by
+        <a href='{{ site.data.photographers[include.photographer].website }}'>
+          {{ include.photographer | capitalize }}
+        </a> -
+      {% endif %}
       License: <a href='{{ include.license_url }}'>{{ include.license }}</a>
     </h2>
   </div>
