--- a/assets/application.scss
+++ b/assets/application.scss
@@ -177,22 +177,26 @@ dt.heading {
 $flickr-height: 160px;
 
 .flickr {
-  h1 {
+  h1, h2, h3 {
     font-size: 1em;
-  }
-
-  h2 {
-    font-size: 1em;
-  }
-
-  .caption h1, h2 {
     padding-top: 0px;
     margin-top: 0px;
   }
 
-  .caption h2 {
+  h2, h3 {
     font-size: 0.7em;
-    text-align: center;
+  }
+
+  .caption dl {
+    padding-top: 0px;
+    margin-top: 0px;
+    font-size: 0.7em;
+  }
+
+  .caption dt {
+  }
+
+  .caption dd {
   }
 
   img {
